--- a/style.css
+++ b/style.css
@@ -2,18 +2,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 0.1rem solid;
+    width: 50%;
+    margin-left: 20rem;
+    border: 0.3rem solid #00BFA6 ;
+    background-color: white;
 }
-
+body{
+    
+}
 button{
-    margin:1rem
+    margin:1rem;
+    border: 0.1rem solid #00BFA6 ;
+
 }
 table{
     margin: 1rem;
     border-collapse: collapse;
 }
-td {
-    border: 2px solid black;
+tr,td {
+    border: 2px solid #00BFA6;
     width: 0%;
     border-collapse: collapse;
     padding: 0.4rem;
