footer re-corrected

--- a/style.css
+++ b/style.css
@@ -14,7 +14,11 @@ h1{
 body{
     background-color: blanchedalmond;
     font-family: 'Oxygen', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
+
 button{
     margin:1rem;
     border: 0.1rem solid #00BFA6 ;
@@ -43,7 +47,7 @@ table th{
     text-align: center;
     color:white;
     border-top-right-radius: 1rem;
-    margin-top: 10rem ;
+    margin-top: auto ;
     margin-left: 0rem;
     margin-right: 0rem;
 }
